--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "credentials"
   ],
   "scripts": {
-    "start": "export NODE_ENV=production&& electron .",
-    "dev": "export NODE_ENV=dev&& electron ."
+    "init": "webpack && electron .",
+    "start": "export NODE_ENV=production&& npm run init",
+    "dev": "export NODE_ENV=dev&& npm run init"
   },
   "devDependencies": {
-    "electron": "^17.0.0"
+    "css-loader": "^6.6.0",
+    "electron": "^17.0.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2"
   }
 }
