--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "devDependencies": {
     "css-loader": "^6.6.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "electron": "^17.0.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.69.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
 }
