--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
   "name": "lock-and-key",
-  "version": "0.0.0",
-  "description": "A cyber-security application for credential and key management.",
+  "version": "0.1.0",
+  "description": "A cyber-security application for password management.",
   "author": "Aidan Loughran",
-  "repository": "https://github.com/aid-lo/lock-and-key.git",
-  "license": "UNLICENSED",
+  "repository": "https://github.com/Defunk-t/lock-and-key.git",
+  "license": "GPL-3.0-only",
   "main": "electron/main.js",
-  "keywords": [
-    "Electron",
-    "cybersecurity",
-    "encryption",
-    "credentials"
-  ],
   "scripts": {
-    "init": "webpack && electron .",
-    "start": "export NODE_ENV=production&& npm run init",
-    "dev": "export NODE_ENV=dev&& npm run init"
+    "start": "electron ."
   },
   "devDependencies": {
-    "css-loader": "^6.6.0",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "electron": "^17.0.0",
-    "mini-css-extract-plugin": "^2.5.3",
-    "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "electron": "17.0.0"
   }
 }
