--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "17.0.0"
+    "electron": "18.0.3"
+  },
+  "dependencies": {
+    "argon2": "0.28.5",
+    "openpgp": "5.2.1"
   }
 }
