--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/Defunk-t/lock-and-key.git",
   "license": "GPL-3.0-only",
   "main": "electron/main.js",
+  "engines": {
+    "node": ">16"
+  },
   "scripts": {
     "start": "electron ."
   },
